add minted, change full name to french

--- a/General/Preamble.tex
+++ b/General/Preamble.tex
@@ -49,3 +49,4 @@
 \usepackage[french,english]{babel}
 \selectlanguage{english} % Sélectionnez l'anglais comme langue par défaut
 \usepackage[utf8]{inputenc} % Allows the use of some special characters
+\usepackage[cache=false,outputdir=build]{minted}
