config for itii

--- a/General/Settings.tex
+++ b/General/Settings.tex
@@ -58,7 +58,7 @@ Nantes, \selectlanguage{french}\today
 
 % Creates a beautiful header/footer
 \pagestyle{fancy}
-\lhead{\includegraphics[height = 20pt]{Figures/0. General/Poly_Univ-Logo.png}}
+\lhead{\includegraphics[height = 20pt]{Figures/0. General/ITII_LOGO_PAYS_DE_LA_LOIRE}}
 \rhead{\reporttitle}
 \renewcommand{\footrulewidth}{0.4pt}
 \cfoot{Page \thepage}
